# ECTI_Atopic_Dermatitis

./: AD_Assessment.py  AD_Assessment_GUI.py  AD_Assessment_GUI_QC.py  AD_Assessment_QC.py  ML_data_conversion.py  ML_data_extraction.py  ML_data_statistics.py  README.md  pyproject.toml  requirements.txt  web_app.py
config/: global_settings.py  model.ini  path.ini  qc.ini
utils/: CNO_KDE_Integration.py  CNO_KDE_QC.py  CNO_detection_multi.py  CNO_detection_single.py  Img_Preprocessing.py  QC_Predictor.py  growcut.py
