[project]
name = "ecti-atopic-dermatitis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.3",
    "nsfopen>=2.2.4",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pip>=25.1.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "timm~=0.9.2",
    "torch==2.5.0",
    "ultralytics>=8.3.162",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/THU-MIG/yolov10.git" }
